[package]
name = "tree"
version = "0.1.0"
edition = "2021"
authors = ["Paul Sobolik <psobolik@zoho.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0.4"
num-format = "0.4.4"
